# nonlocal-relativity-v2

./: .gitignore  CHANGELOG.md  Cargo.toml  Documentation.md  Documentation_AR.md  Documentation_DE.md  Documentation_EN.md  Documentation_ES.md  Documentation_JA.md  Documentation_KO.md  Documentation_ZH.md  INTEGRATION_GUIDE.md  LICENSE.md  LICENSING.md  LIVESTATE.md  RADAR_OPTRONICS_I_2026-07-11.md  RADAR_OPTRONICS_XIII_2026-07-11.md  RADAR_OPTRONICS_XII_2026-07-11.md  RADAR_OPTRONICS_XIV_2026-07-11.md  RADAR_OPTRONICS_XIX_2026-07-12.md  RADAR_OPTRONICS_XI_2026-07-11.md  RADAR_OPTRONICS_XVIII_2026-07-12.md  RADAR_OPTRONICS_XVII_2026-07-11.md  RADAR_OPTRONICS_XXVIII_2026-07-12.md  RADAR_OPTRONICS_XXVII_2026-07-12.md  RADAR_OPTRONICS_XXXV_2026-07-12.md  RADAR_OPTRONICS_X_2026-07-11.md  README.md  SECURITY.md  SIMULATION_ENVIRONMENTS_2026-07-10.md  SIMULATION_ENVIRONMENTS_IX_2026-07-11.md  SIMULATION_ENVIRONMENTS_XI_2026-07-11.md  deny.toml  rust-toolchain.toml  scirust_audit.txt  scirust_context.txt  topo.md  upgrade_core.sh
scirust-agtech/: Cargo.toml
scirust-agtech/src/: agpl.rs  idw.rs  lib.rs  outlier_filter.rs
scirust-automl/: Cargo.toml
scirust-automl/src/: lib.rs
scirust-biomed/: Cargo.toml
scirust-biomed/src/: conformal_beats.rs  ecg.rs  lib.rs
scirust-bms/: Cargo.toml
scirust-bms/src/: dual.rs  lib.rs  soc.rs  soh.rs  thermal.rs
scirust-codetrans/: Cargo.toml
scirust-codetrans/src/: lib.rs
scirust-cuda/: Cargo.toml
scirust-cuda/src/: chain.rs  lib.rs
scirust-evo/: Cargo.toml
scirust-evo/src/: lib.rs
scirust-fab/: Cargo.toml
scirust-fab/src/: lib.rs  pca.rs  r2r.rs
scirust-fractional/: Cargo.toml
scirust-fractional/src/: caputo.rs  caputo_nonuniform.rs  error.rs  grunwald_letnikov.rs  lib.rs  order.rs  validation.rs
scirust-fractional/tests/: caputo_nonuniform.rs  operators.rs
scirust-func-safety/: Cargo.toml
scirust-func-safety/src/: asil.rs  audit.rs  degraded_mode.rs  evidence.rs  fault_injection.rs  lib.rs  requirements.rs
scirust-gpu/: Cargo.toml
scirust-gpu/examples/: gpu_attention_probe.rs  gpu_bench.rs
scirust-gpu/src/: chain.rs  conv_gpu.rs  cuda_backend.rs  deterministic.rs  deterministic_gpu.rs  engine.rs  fusion.rs  gpu_gemm.rs  gpu_tensor.rs  kernels.rs  lib.rs  ops.rs  tensor.rs  wgpu_backend.rs
scirust-grid/: Cargo.toml
scirust-grid/src/: distance_relay.rs  lib.rs  state_estimation.rs
scirust-maritime/: Cargo.toml
scirust-maritime/src/: colregs.rs  cpa_tcpa.rs  lib.rs  thrust_allocation.rs
scirust-mlops/: Cargo.toml
scirust-mlops/src/: drift.rs  lib.rs  ota.rs  shadow.rs
scirust-mqtt/: Cargo.toml
scirust-mqtt/src/: lib.rs
scirust-nav/: Cargo.toml
scirust-nav/src/: fusion.rs  ins.rs  lib.rs  tdoa.rs
scirust-nonlocal-relativity/: Cargo.toml  README.md
scirust-nonlocal-relativity/benches/: caputo_history.rs
scirust-nonlocal-relativity/examples/: adaptive_transported_modulated.rs  adaptive_worldline.rs  adaptive_worldline_stepper.rs  exact_transport_convergence.rs  kerr_worldline.rs  proper_time_memory_comparison.rs  reissner_nordstrom_field_modulation.rs  schwarzschild_orbit_transport.rs
scirust-nonlocal-relativity/src/: adaptive.rs  adaptive_control.rs  adaptive_stepper.rs  charts.rs  curved_transport.rs  geometric_error.rs  lib.rs  modulation.rs  nonuniform_kernel.rs  nonuniform_memory.rs  proper_time.rs  transport.rs
scirust-nonlocal-relativity/tests/: adaptive.rs  adaptive_stepper.rs  bounded_memory.rs  curved_transport.rs  exact_transport.rs  geometric_error.rs  history_retention.rs  proper_time_memory.rs  reissner_nordstrom_modulation.rs  stepper_context.rs  worldline.rs
scirust-opcua/: Cargo.toml
scirust-opcua/src/: lib.rs
scirust-pdm/: Cargo.toml
scirust-pdm/src/: adaptive_guard.rs  change_detection.rs  conformal_rul.rs  detectors.rs  health.rs  lib.rs  rul.rs
scirust-relativity/: Cargo.toml
scirust-relativity/benches/: action.rs  adm.rs  adm_evolution.rs  geometry_core.rs  ppn.rs
scirust-relativity/src/: action.rs  adm.rs  adm_evolution.rs  connection.rs  covariant_transport.rs  curvature.rs  de_sitter.rs  error.rs  exponential_map.rs  flrw.rs  geodesic.rs  geodesic_deviation.rs  isotropic_schwarzschild.rs  kerr.rs  lib.rs  linearized.rs  metric.rs  minkowski.rs  minkowski_spherical.rs  painleve_gullstrand.rs  parallel_transport.rs  reissner_nordstrom.rs  schwarzschild.rs  static_spherical.rs  synge.rs  tetrad.rs
scirust-relativity/tests/: action.rs  adm.rs  adm_evolution.rs  coordinate_independence.rs  covariant_transport.rs  curvature.rs  exponential_map.rs  flrw.rs  geodesic_deviation.rs  geometry.rs  kerr.rs  linearized.rs  parallel_transport.rs  ppn.rs  reissner_nordstrom.rs  schwarzschild.rs  synge.rs  tetrad.rs  van_vleck.rs
scirust-rl-algo/: Cargo.toml
scirust-rl-algo/src/: lib.rs
scirust-runtime/: Cargo.toml  README.md
scirust-runtime/src/: enclave.rs  lib.rs  proof.rs
scirust-runtime/tests/: fingerprint_thread_invariance.rs
scirust-scaffold/: Cargo.toml
scirust-scaffold/src/: lib.rs
scirust-sciagent/: AGENTS.md  Cargo.toml  JETSON_THOR.md  README.md  ROUTE_B.md
scirust-sciagent/examples/: cuda_eval.rs  cuda_pretrain.rs  resident_infer_bench.rs  resident_pretrain.rs  resident_repl.rs
scirust-sciagent/src/: attention.rs  block.rs  bpe.rs  ccos.rs  config.rs  cuda_model.rs  generate.rs  gpu.rs  inference.rs  lib.rs  model.rs  norm.rs  planning.rs  quantize.rs  sha256.rs  swiglu.rs  tokenizer.rs
scirust-sciagent/tests/: cuda_parity.rs  gpu_parity.rs  integration.rs
scirust-sciagent/tokenizer/: bpe.json
scirust-shm/: Cargo.toml
scirust-shm/src/: lib.rs
scirust-signal/: Cargo.toml
scirust-signal/src/: bearing.rs  cepstrum.rs  complex.rs  fft.rs  lib.rs  mcsa.rs  order.rs  windows.rs
scirust-sim/: Cargo.toml
scirust-sim/src/: chemistry.rs  ecology.rs  electrical.rs  engine.rs  env.rs  envs.rs  epidemiology.rs  laser.rs  lib.rs  mechanics.rs  orbital.rs  rng.rs  stochastic.rs  thermal.rs
scirust-simd/: ARCHITECTURE.md  Cargo.toml
scirust-simd/src/: amx.rs  (+12 more)
scirust-synthesis/: Cargo.toml
scirust-tn/: Cargo.toml  README.md
(+575 files in other folders)
