[package]
name = "scirust-automl"
version = "0.1.0"
edition = "2021"
description = "AutoML: automatic pipeline generation, model selection, hyperparameter optimization"
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
scirust-core = { path = "../scirust-core" }
scirust-evo = { path = "../scirust-evo" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
