[package]
name = "scirust-biomed"
version = "0.1.0"
edition = "2021"
publish = false
description = "SciRust biomedical signals — ECG R-peak detection, rhythm classification, conformal beat prediction sets"

[dependencies]
scirust-core = { path = "../scirust-core" }
serde = { version = "1", features = ["derive"] }
