[package]
name = "scirust-biomed"
version = "0.1.0"
edition = "2021"
publish = false
description = "SciRust biomedical signals — ECG R-peak detection, rhythm classification, conformal beat prediction sets — plus closed-loop dosing control primitives (PID, IOB, CBF-QP safety filter)"

[dependencies]
scirust-core = { path = "../scirust-core" }
scirust-sim = { path = "../scirust-sim", optional = true }
serde = { version = "1", features = ["derive"] }

[features]
# Expose this crate's glucose-insulin dynamics as a `scirust_sim::System`, so
# the shared simulation engine can integrate it. Off by default — pulls in
# scirust-sim only when requested.
sim = ["dep:scirust-sim"]

[dev-dependencies]
approx = "0.5"
