[package]
name = "scirust-codetrans"
version = "0.1.0"
edition = "2021"
description = "Code-to-code transformation: refactoring, optimization, transpilation, pattern matching"
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
