[package]
name = "scirust-func-safety"
version = "0.1.0"
edition = "2021"
publish = false
description = "SciRust Functional Safety — ISO 26262 / IEC 61508 compliance for automotive AI"

[dependencies]
scirust-core = { path = "../scirust-core" }
scirust-edge = { path = "../scirust-edge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"