[package]
name = "scirust-mlops"
version = "0.1.0"
edition = "2021"
publish = false
description = "SciRust MLOps — drift detection, shadow deployment, OTA model distribution for industrial AI"

[dependencies]
scirust-core = { path = "../scirust-core" }
scirust-runtime = { path = "../scirust-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rand = "0.8"