[package]
name = "scirust-relativity"
version = "0.1.0"
edition = "2021"
publish = false
description = "Deterministic differential-geometry and geodesic simulation primitives for SciRust. Pure Rust, no unsafe."

[dependencies]
scirust-sim = { path = "../scirust-sim" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "geometry_core"
harness = false

[[bench]]
name = "ppn"
harness = false

[[bench]]
name = "action"
harness = false

[[bench]]
name = "adm"
harness = false
