[package]
name = "scirust-sciagent"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.85"
description = "SCIAGENT — SLM deterministe entraine from scratch, specialise Rust + agentique, infere via scirust/CCOS/SLHAv2"

[dependencies]
scirust-core = { path = "../scirust-core" }
scirust-autodiff = { path = "../scirust-autodiff" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
approx = "0.5"

[features]
default = []
