[package]
name = "scirust-simd"
version = "0.1.0"
edition = "2021"
authors = ["SciRust Team"]
description = "SIMD auto-vectorization primitives for SciRust"
license-file = "../LICENSE.md"

[dependencies]
scirust-simd-macros = { path = "../scirust-simd-macros" }

[features]
portable-simd = []
default = []
