[package]
name = "scirust-synthesis"
version = "0.1.0"
edition = "2021"
description = "Enhanced program synthesis: multi-variable, rich grammar, sketching, inductive synthesis"
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
scirust-core = { path = "../scirust-core" }
scirust-symbolic = { path = "../scirust-symbolic" }
scirust-evo = { path = "../scirust-evo" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
